Login and Register module

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/site/add-post.js": "/js/site/add-post.js",
+    "/js/site/welcome.js": "/js/site/welcome.js",
     "/css/app.css": "/css/app.css"
 }
