--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/site/add-post.js": "/js/site/add-post.js",
+    "/js/site/profile.js": "/js/site/profile.js",
     "/js/site/welcome.js": "/js/site/welcome.js",
     "/css/app.css": "/css/app.css"
 }
