--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
     "/js/script.js": "/js/script.js",
     "/js/site/add-post.js": "/js/site/add-post.js",
     "/js/site/profile.js": "/js/site/profile.js",
+    "/js/site/review.js": "/js/site/review.js",
     "/js/site/welcome.js": "/js/site/welcome.js",
     "/css/app.css": "/css/app.css"
 }
