Working flow changes

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,5 +7,6 @@
     "/js/site/review.js": "/js/site/review.js",
     "/js/site/welcome.js": "/js/site/welcome.js",
     "/css/app.css": "/css/app.css",
+    "/css/dashboard.css": "/css/dashboard.css",
     "/css/review.css": "/css/review.css"
 }
